# TransientCreator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  claude.md
.claude/agents/: accessibility-pro.md  audio-qa-tester.md  ci-enhancer.md  code-refactorer.md  code-reviewer.md  dsp-debugger.md  hpss-tuner.md  izotope-rx-expert.md  juce-build-doctor.md  latency-analyzer.md  legacy-cleaner.md  parameter-auditor.md  stft-validator.md  system-architect.md  test-generator.md  ui-polisher.md  ux-optimizer.md
.github/workflows/: build.yml
Docs/: DSP_DESIGN.md  PRESETS.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedState.h
Source/DSP/: DopplerProcessor.cpp  DopplerProcessor.h  EnvelopeConstants.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  TransientEngine.cpp  TransientEngine.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
Source/UI/Components/: EnvelopeVisualizer.cpp  EnvelopeVisualizer.h  TransientControls.cpp  TransientControls.h
Source/UI/LookAndFeel/: TransientLookAndFeel.cpp  TransientLookAndFeel.h
Source/UI/Panels/: MainPanel.cpp  MainPanel.h
Tests/: CMakeLists.txt  EnvelopeGeneratorTests.cpp  TransientEngineTests.cpp
